<resources>
    <string name="app_name">Medi_Bridge</string>
    <string name="schedule_appointment_n_with_ease">Schedule Appointment\n with Ease</string>
    <string name="consult_only_with_a_n_a_doctor_you_trust">Consult only with a<font color='#1FC29D'>\nDoctor you trust</font></string>
    <string name="we_can_help_you_to_find_available_n_doctor_appointments_near_you">We can help you to find available\n doctor appointments near you</string>
    <string name="get_started">Get Started</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="back_button">Back</string>

    <!-- Doctor Activity Strings -->
    <string name="doctor_portal">Doctor Portal</string>
    <string name="doctor_login">Doctor Login</string>
    <string name="access_doctor_dashboard">Access your doctor dashboard</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_id">Doctor ID</string>
    <string name="full_name_required">Full Name *</string>
    <string name="email_address_required">Email Address *</string>
    <string name="degrees_required">Degrees *</string>
    <string name="specialty_required">Specialty *</string>
    <string name="designation_department_required">Designation &amp; Department *</string>
    <string name="chamber_name_required">Chamber Name *</string>
    <string name="chamber_address_required">Chamber Address *</string>
    <string name="visiting_hour_off_days_required">Visiting Hour and Off Days *</string>
    <string name="appointment_number">Appointment Number</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="no_account_signup">Don\'t have an account? Sign up</string>
    <string name="have_account_login">Already have an account? Login</string>
    <string name="medibridge_logo">MediBridge Logo</string>

    <!-- Additional DoctorActivity strings -->
    <string name="login_to_account">Login to Your Account</string>
    <string name="enter_credentials">Enter your credentials to access doctor portal</string>
    <string name="create_new_account">Create New Account</string>
    <string name="fill_info_register">Fill in your information to register as a doctor</string>
    <string name="already_have_account_login">Already have an account? Login</string>
    <string name="dont_have_account_signup">Don\'t have an account? Sign Up</string>
    <string name="hello">Hello!</string>
    <string name="how_are_you_today">How Are You Today?</string>
    <string name="specializations">Specializations</string>
    <string name="see_all">See all</string>
    <string name="doctors_you_may_looking_for">Doctors you may looking for</string>
    <string name="home">Home</string>
    <string name="home_icon">Home_Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="search">Search</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="_1">1</string>
    <string name="notification">Notification</string>
    <string name="doctor_icon">Doctor Icon</string>
    <string name="doctor">Doctor</string>
    <string name="medical_icon">Medical Icon</string>
    <string name="medical_appointment">Medical Appointment</string>
    <string name="dr_john_doe">Dr. John Doe</string>
    <string name="patient_s_details">Patient\'s Details</string>
    <string name="first_name">First Name *</string>
    <string name="patients_first_name">First Name</string>
    <string name="patients_last_name">Last Name *</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="gender">Gender *</string>
    <string name="contact_number">Contact Number *</string>
    <string name="_880_123_456_789">+880 123-456-789</string>
    <string name="email_id">Email id</string>
    <string name="enter_patient_s_email_id">Enter patient\'s email id</string>
    <string name="available_dates">Available Dates *</string>
    <string name="available_times">Available Times *</string>
    <string name="message_optional">Message (Optional)</string>
    <string name="enter_any_additional_message_or_special_requirements">Enter any additional message or special requirements...</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="confirmed">CONFIRMED</string>
</resources>